// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshots > agentsMd_fullContext_matchesSnapshot 1`] = `
"
# my-service

A sample service

## Architecture

- **Style:** hexagonal
- **Language:** python 3.9
- **Framework:** click 8.1

### Dependency Direction

Dependencies point inward toward the domain. Domain NEVER imports adapter or framework code.

\`\`\`
adapter.inbound → application → domain ← adapter.outbound
                                  ↑
                           (ports/interfaces)
\`\`\`

## Tech Stack

| Component | Technology |
|-----------|------------|
| Language | python 3.9 |
| Framework | click 8.1 |
| Build Tool | pip |
| Container | docker |
| Database | postgresql |
| Cache | redis |
| Orchestrator | kubernetes |
| Observability | opentelemetry |

## Commands

| Command | Script |
|---------|--------|
| Build | \`npm run build\` |
| Test | \`npm test\` |
| Compile | \`npx tsc --noEmit\` |
| Coverage | \`npm run test:coverage\` |

## Coding Standards

### Hard Limits

| Constraint | Limit |
|-----------|-------|
| Method/function length | ≤ 25 lines |
| Class/module length | ≤ 250 lines |
| Parameters per function | ≤ 4 (use parameter object if more) |
| Line width | ≤ 120 characters |

### Naming

- Intent-revealing names: \`elapsedTimeInMs\` not \`d\`
- Verbs for methods: \`processTransaction()\`, \`extractAmount()\`
- Nouns for types: \`TransactionHandler\`, \`DecisionEngine\`
- Named constants: never magic numbers or strings

### SOLID Principles

- **SRP**: One class = one reason to change
- **OCP**: New behavior = new class, never modify existing handlers
- **LSP**: Every implementation must fulfill its interface contract
- **ISP**: Small focused interfaces; no empty method implementations
- **DIP**: Depend on abstractions (ports), not concrete implementations

### Error Handling

- NEVER return null — use Optional, empty collection, or Result type
- NEVER pass null as argument
- Exceptions MUST carry context (values that caused the error)
- Catch at the right level, not where convenient

### Forbidden Patterns

- Boolean flags as function parameters
- Comments that repeat what code says
- Mutable global state
- God classes / train wrecks (chained calls across objects)
- Wildcard imports
- \`sleep()\` for synchronization

### Language-Specific

Follow python 3.9 idiomatic conventions for formatting, constructor injection, and mapper patterns.

## Quality Gates

### Coverage Thresholds

| Metric | Minimum |
|--------|---------|
| Line Coverage | ≥ 95% |
| Branch Coverage | ≥ 90% |

### Test Categories

1. **Unit** — domain models, engines, business rules
2. **Integration** — database + framework
3. **API** — HTTP/gRPC/GraphQL endpoints
5. **E2E** — full flow with real database
6. **Performance** — latency SLAs, throughput, resource usage
7. **Smoke** — black-box against running environment

### Test Naming

\`\`\`
[methodUnderTest]_[scenario]_[expectedBehavior]
\`\`\`

### Merge Checklist

- [ ] All tests passing
- [ ] Coverage ≥ 95% line, ≥ 90% branch
- [ ] Zero compiler/linter warnings
- [ ] Security review for sensitive changes

## Domain

This project follows Domain-Driven Design principles.

### Domain Model

Define your core entities, value objects, and aggregates here.

### Aggregate Boundaries

Each aggregate enforces its own invariants. Cross-aggregate communication happens through domain events or application services.

### Business Rules

Document business rules with unique identifiers (e.g., BR-001) for traceability.

## Security

### Security Frameworks

- owasp
- pci-dss

### Guidelines

- Follow OWASP Top 10 recommendations
- Never store secrets in source code
- Validate all external input at system boundaries
- Use parameterized queries for database access
- Apply principle of least privilege

## Conventions

### Commits

- Format: Conventional Commits (\`feat:\`, \`fix:\`, \`chore:\`, \`docs:\`, \`refactor:\`, \`test:\`)
- Language: English

### Branches

- Feature: \`feat/STORY-ID-description\`
- Fix: \`fix/STORY-ID-description\`
- Chore: \`chore/description\`

### Code Language

- All code (classes, methods, variables): English
- All documentation: English
- Application logs: English

### Documentation

- Keep documentation close to the code it describes
- Update documentation when changing behavior

## Available Skills

| Skill | Description |
|-------|-------------|
| x-dev-implement | Implement features |
| x-review | Code review |


## Agent Personas

| Agent | Role |
|-------|------|
| architect | System architect |
| tech-lead | Technical lead |
| qa-engineer | Quality assurance |


"
`;

exports[`Snapshots > agentsMd_minimalContext_matchesSnapshot 1`] = `
"
# minimal-api

A minimal API service

## Architecture

- **Style:** layered
- **Language:** go 1.22
- **Framework:** gin 1.9

### Dependency Direction

Dependencies point inward toward the domain. Domain NEVER imports adapter or framework code.

\`\`\`
adapter.inbound → application → domain ← adapter.outbound
                                  ↑
                           (ports/interfaces)
\`\`\`

## Tech Stack

| Component | Technology |
|-----------|------------|
| Language | go 1.22 |
| Framework | gin 1.9 |
| Build Tool | go |
| Container | docker |

## Commands

| Command | Script |
|---------|--------|
| Build | \`go build ./...\` |
| Test | \`go test ./...\` |
| Compile | \`go vet ./...\` |
| Coverage | \`go test -coverprofile=coverage.out ./...\` |

## Coding Standards

### Hard Limits

| Constraint | Limit |
|-----------|-------|
| Method/function length | ≤ 25 lines |
| Class/module length | ≤ 250 lines |
| Parameters per function | ≤ 4 (use parameter object if more) |
| Line width | ≤ 120 characters |

### Naming

- Intent-revealing names: \`elapsedTimeInMs\` not \`d\`
- Verbs for methods: \`processTransaction()\`, \`extractAmount()\`
- Nouns for types: \`TransactionHandler\`, \`DecisionEngine\`
- Named constants: never magic numbers or strings

### SOLID Principles

- **SRP**: One class = one reason to change
- **OCP**: New behavior = new class, never modify existing handlers
- **LSP**: Every implementation must fulfill its interface contract
- **ISP**: Small focused interfaces; no empty method implementations
- **DIP**: Depend on abstractions (ports), not concrete implementations

### Error Handling

- NEVER return null — use Optional, empty collection, or Result type
- NEVER pass null as argument
- Exceptions MUST carry context (values that caused the error)
- Catch at the right level, not where convenient

### Forbidden Patterns

- Boolean flags as function parameters
- Comments that repeat what code says
- Mutable global state
- God classes / train wrecks (chained calls across objects)
- Wildcard imports
- \`sleep()\` for synchronization

### Language-Specific

Follow go 1.22 idiomatic conventions for formatting, constructor injection, and mapper patterns.

## Quality Gates

### Coverage Thresholds

| Metric | Minimum |
|--------|---------|
| Line Coverage | ≥ 80% |
| Branch Coverage | ≥ 70% |

### Test Categories

1. **Unit** — domain models, engines, business rules
2. **Integration** — database + framework
3. **API** — HTTP/gRPC/GraphQL endpoints
5. **E2E** — full flow with real database

### Test Naming

\`\`\`
[methodUnderTest]_[scenario]_[expectedBehavior]
\`\`\`

### Merge Checklist

- [ ] All tests passing
- [ ] Coverage ≥ 80% line, ≥ 70% branch
- [ ] Zero compiler/linter warnings
- [ ] Security review for sensitive changes

## Conventions

### Commits

- Format: Conventional Commits (\`feat:\`, \`fix:\`, \`chore:\`, \`docs:\`, \`refactor:\`, \`test:\`)
- Language: English

### Branches

- Feature: \`feat/STORY-ID-description\`
- Fix: \`fix/STORY-ID-description\`
- Chore: \`chore/description\`

### Code Language

- All code (classes, methods, variables): English
- All documentation: English
- Application logs: English

### Documentation

- Keep documentation close to the code it describes
- Update documentation when changing behavior

"
`;

exports[`Snapshots > configToml_fullContext_matchesSnapshot 1`] = `
"# Codex CLI configuration for my-service
# Generated by ia-dev-environment -- do not edit manually.

model = "o4-mini"
approval_policy = "on-request"

[sandbox]
mode = "workspace-write"


[mcp_servers.firecrawl]
command = ["npx", "firecrawl-mcp"]

[mcp_servers.firecrawl.env]
API_KEY = "test-key-xxx"

"
`;

exports[`Snapshots > configToml_minimalContext_matchesSnapshot 1`] = `
"# Codex CLI configuration for minimal-api
# Generated by ia-dev-environment -- do not edit manually.

model = "o4-mini"
approval_policy = "untrusted"

[sandbox]
mode = "workspace-write"
"
`;
